# gba-ai-services

./: .gitignore  Makefile  README.md
gba-forecast/: .env.example  .gitignore  README.md  pyproject.toml
gba-forecast/app/api/: main.py
gba-forecast/app/core/: config.py  logging.py  metrics.py
gba-forecast/app/data/: cache.py  db.py  signals_repository.py
gba-forecast/app/services/: forecast.py
gba-forecast/app/services/forecasting/: backtest.py  classify.py  demand.py  selection.py
gba-forecast/deploy/: gba-forecast.service
gba-forecast/scripts/: run_backtest.py
gba-forecast/tests/: test_api.py  test_backtest_selection.py  test_config.py  test_forecast.py  test_integration_dev_db.py
gba-nba/: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
gba-nba/app/api/: main.py
gba-nba/app/clients/: reco_client.py
gba-nba/app/core/: config.py
gba-nba/app/data/: mongo.py  signals_repository.py
gba-nba/app/domain/: models.py
gba-nba/app/ml/: dataset.py  score_task.py  train.py
gba-nba/app/ml/artifacts/: MODEL_CARD.md  metrics.json  model_meta.json
gba-nba/app/services/: lifecycle.py  orchestrator.py  scheduler.py  scoring.py  targets.py  worker.py
gba-nba/app/services/generators/: churn_winback.py  cross_sell.py  debt_followup.py  new_client_activation.py  reorder_due.py
gba-nba/deploy/systemd/: gba-nba-retrain.service  gba-nba-retrain.timer
gba-nba/docs/: MASTER_PLAN.md  PHASE3_CONTRACT.md  PHASE4_STEP3_CONTRACT.md  REALDATA_CALIBRATION.md  TO_100_BACKLOG.md  menu_seed.sql
gba-nba/scripts/: build_nba_dataset.py  calibration_workflow.js  inbox_analysis.py  realdata_census.py  realdata_generate.py  retrain.py  trim_active_backlog.py
gba-nba/tests/: conftest.py  test_cockpit_api.py  test_cross_service_feedback.py  test_dashboard.py  test_generators.py  test_head_escalated.py  test_head_team.py  test_lifecycle.py  test_orchestrator_diversity.py  test_retrain.py  test_scoring.py  test_signals_integration.py  test_signals_source_guards.py  test_targets.py  test_trim_active_backlog.py
gba-pricing/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
gba-pricing/app/api/: main.py
gba-pricing/app/core/: config.py  logging.py  metrics.py
gba-pricing/app/data/: cache.py  db.py  pricing_repository.py
gba-pricing/app/domain/: models.py
gba-pricing/app/services/pricing/: elasticity.py  recommend.py  service.py
gba-pricing/scripts/: elasticity_backtest.py  smoke_test.py
gba-pricing/tests/: test_api_shell.py  test_elasticity.py  test_integration_db.py  test_models.py  test_recommend.py  test_repository.py  test_service.py  test_source_guards.py
gba-procure/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
gba-procure/.github/workflows/: ci.yml
gba-procure/app/api/: main.py
gba-procure/app/core/: config.py  logging.py
gba-procure/app/data/: cache.py  cost_repository.py  db.py  feedback.py  masters.py  supply_repository.py
gba-procure/app/domain/: models.py
gba-procure/app/services/: scheduler.py
gba-procure/app/services/classify/: segmentation.py  service.py
gba-procure/app/services/eval/: backtest.py
gba-procure/app/services/forecasting/: demand.py  lead_time.py
gba-procure/app/services/optimization/: milp.py
gba-procure/app/services/replenishment/: policy.py  worker.py
gba-procure/docs/: RUNBOOK.md
gba-procure/scripts/: procure_backtest_gate.json  procure_backtest_sweep.py
gba-procure/tests/: test_api_validation.py  test_backtest_metric.py  test_backtest_sweep_gate.py  test_cart_plan.py  test_charts.py  test_integration_dev_db.py  test_policy.py  test_repository_source_guards.py
gba-products/: .env.example  SPEC.md  pyproject.toml
gba-products/app/api/: main.py
gba-products/app/core/: config.py  logging.py
gba-products/app/data/: cache.py  catalog_repository.py  db.py  signals_repository.py
gba-products/app/domain/: models.py
gba-products/app/services/: classification.py  health_backtest.py  health_score.py  margin_returns.py  portfolio.py  stock_health.py  substitution.py
gba-products/docs/: product-health-backtest-baseline.json
gba-products/scripts/: _wf_forecast.js  product_health_backtest.py
gba-products/tests/: test_bands.py  test_cache.py  test_classification.py  test_health_backtest.py  test_health_score.py  test_integration_dev_db.py  test_margin_returns.py  test_repository_source_guards.py  test_substitution.py
gba-reco/: .env.example  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
gba-reco/app/api/: main.py
gba-reco/app/core/: config.py
gba-reco/app/data/: cache.py  db.py  sales_repository.py
gba-reco/app/domain/: models.py
gba-reco/app/services/: scheduler.py
gba-reco/app/services/eval/: baselines.py  harness.py
gba-reco/app/services/recommendations/: als.py  copurchase.py  recommender.py  service.py  worker.py
gba-reco/docs/: RUNBOOK.md  eval-baseline.md
gba-reco/scripts/: realdata_tuning_sweep.py  repurchase_quota_sweep.py  smoke_test.py
gba-reco/tests/: test_feedback.py  test_integration_recommend.py  test_smoke.py  test_source_guards.py
gba-solvency/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
gba-solvency/app/api/: main.py
gba-solvency/app/core/: config.py  logging.py
gba-solvency/app/data/: cache.py  db.py  solvency_repository.py
gba-solvency/app/domain/: models.py
gba-solvency/app/risk/: dataset.py  monitor.py  score_current.py  score_forward.py
gba-solvency/app/risk/artifacts/: cv_report.json  forward_scorecard_coeffs.json  (+2 more)
gba-solvency/deploy/systemd/: gba-solvency-retrain.service  gba-solvency-retrain.timer
gba-solvency/scripts/: benchmark_vs_old.py  build_risk_dataset.py  build_vintages.py  retrain.py  smoke_test.py  train_current_state.py  train_forward_risk.py
gba-solvency/tests/: test_api_shell.py  test_integration_db.py  test_risk_dataset.py  test_scenarios_v3.py  test_scoring.py  test_service.py  test_smoke.py  test_source_guards.py
(+3 files in other folders)
