[project]
name = "gba-nba"
version = "0.1.0"
description = "GBA AI Sales Cockpit — Next Best Action task engine (stateful, MongoDB)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.2",
    "uvicorn[standard]>=0.49.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymongo>=4.17.0",
    "sqlalchemy>=2.0.51",
    "pymssql>=2.3.13",
    "httpx>=0.28.1",
    "structlog>=26.1.0",
    "apscheduler>=3.11.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "mongomock>=4.3",
    "httpx2>=2.5",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: DB-backed smoke against the dev ConcordDb_V5 (skipped without DB_* env; run via 'make integration')",
]
