[project]
name = "gba-pricing"
version = "0.1.0"
description = "GBA B2B Price/Discount Optimization Service (pricing-ab-v1)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.2",
    "uvicorn[standard]>=0.49.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "pymssql>=2.3.13",
    "redis>=8.0.1",
    "structlog>=26.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
    "httpx>=0.28",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: DB-backed smoke against the dev DB; skipped without DB env (run via `make integration`)",
]
